--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button type="button" class="btn btn-primary">Button-1</button>
-<button type="button" class="btn btn-outline-secondary">Button-2</button>
-<button type="button" class="btn btn-success btn-lg">Button-3</button>
-<button type="button" class="btn btn-danger btn-sm">Button-4</button>
-<button type="button" class="btn btn-warning btn-lg btn-block">Button-5</button>
-<button type="button" class="btn btn-info" disabled>Button-6</button>
-<button type="button" class="btn btn-light">Button-7</button>
-<button type="button" class="btn btn-link">Button-8</button>
+	<button type="button" class="btn btn-primary">button-1</button>
+<button type="button" class="btn btn-outline-secondary">button-2</button>
+<button type="button" class="btn btn-success btn-lg">button-3</button>
+<button type="button" class="btn btn-danger btn-sm">button-4</button>
+<button type="button" class="btn btn-warning btn-lg btn-block">button-5</button>
+<button type="button" class="btn btn-info" disabled>button-6</button>
+<button type="button" class="btn btn-light">button-7</button>
+<button type="button" class="btn btn-link">button-8</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
